--- a/OldMaid/GoogleService-Info.plist
+++ b/OldMaid/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>250767119206-47v22cgk87gt50k77lnjplv1555iadrj.apps.googleusercontent.com</string>
+	<string>540490906987-1h6bkvmqmi0cs0utkff9d276tjjql69b.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.250767119206-47v22cgk87gt50k77lnjplv1555iadrj</string>
+	<string>com.googleusercontent.apps.540490906987-1h6bkvmqmi0cs0utkff9d276tjjql69b</string>
 	<key>API_KEY</key>
-	<string>AIzaSyC5WLCpZ34dPncEY1ID50kK5eBtJGHtTEw</string>
+	<string>AIzaSyD49dKLxVpE5jBrwOL28TIbbXw6uTNEFfw</string>
 	<key>GCM_SENDER_ID</key>
-	<string>250767119206</string>
+	<string>540490906987</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.mrjb.OldMaid</string>
 	<key>PROJECT_ID</key>
-	<string>ios-database-2</string>
+	<string>ios-database-4c154</string>
 	<key>STORAGE_BUCKET</key>
-	<string>ios-database-2.appspot.com</string>
+	<string>ios-database-4c154.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,6 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:250767119206:ios:0b48a8fb2c36e622d86ea7</string>
+	<string>1:540490906987:ios:dad0e74a8f7b0160e8202e</string>
 </dict>
 </plist>
